--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -108,7 +108,8 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="submit-btn">Create Address</button>
+                <button type="reset" class="cancel">Cancel</button>
             </div>
         </form>
     </div>
