D:\shopify-Theme-Devlopment\mydown\sections\template-activate-account.liquid

--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -373,4 +373,37 @@ function closeAddressForm() {
     width: 50%;
 }
 
+
+.form-groupbt {
+    display: flex;
+    justify-content: flex-start;
+    gap: 40px;
+    margin-top: 20px; /* Add some space above the buttons */
+}
+
+.submit-btn {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    background-color: #333;
+}
+
+.cancel {
+    background-color: transparent;
+    color: black;
+    padding: 10px 20px;
+    border: 2px solid black;
+    cursor: pointer;
+}
+
+.cancel:hover {
+    background-color: #f0f0f0;
+}
+
+
 </style>
