--- a/sections/template-customer-login.liquid
+++ b/sections/template-customer-login.liquid
@@ -137,11 +137,11 @@
       </div>
     </div>
   
-{% if shop.checkout.guest_login%} 
+{% comment %} {% if shop.checkout.guest_login%} 
 allowed
 {% else %}
 not allowed
-{% endif %}
+{% endif %} {% endcomment %}
 
     <div class="recover-password-section" style="display: none;">
       <div class="recover-password-container">
