--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,37 +1,19 @@
- {% comment %} {% paginate collection.products by 2 %}
- <h1>{{ collection.title }}</h1>
- {% for product in collection.products %}
- <div>
- <a href="{{ product.url | within: collection }}">{{ product.title}}</a>
- {{ product.price | money }}
- {% unless product. available %}<br><strong>sold out</strong> {% endunless %}
- <a href="{{ product.url | within: collection }}">
- <img src="{{ product.featured_image.src img_url: 'large' }}" alt="{{ product.featured_image.alt | escape}}" width="" height="">
- </a>
- </div>
- {% else %}
- <p>no matches</p>
- {% endfor %}
- {% if paginate.pages >1 %}
- {{ paginate default_pagination }}
- {% endif %}
-{% endpaginate %} {% endcomment %}
-
-{% paginate collection.products by 2 %}
-  <h1>{{ collection.title }}</h1>
-  {% for product in collection.products %}
-    <div>
-      <a href="{{ product.url | within: collection }}">{{ product.title}}</a>
-      {{ product.price | money }}
-      {% unless product.available %}<br><strong>sold out</strong> {% endunless %}
-      <a href="{{ product.url | within: collection }}">
-        <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}" width="" height="">
-      </a>
-    </div>
-  {% else %}
-    <p>no matches</p>
-  {% endfor %}
-  {% if paginate.pages > 1 %}
-    {{ paginate.default_pagination }}
-  {% endif %}
-{% endpaginate %}
+1 {% paginate collection.products by 2 %}
+2 <h1>{{ collection.title }}</h1>
+B {% for product in collection.products %}
+4 <div>
+5 <a href="{{ product.url | within: collection }}">{{ product.title}}</a>
+6 {{ product.price | money }}
+7 {% unless product. available %}<br><strong>sold out</strong> {% endunless %}
+8 <a href="{{ product.url | within: collection }}">
+9 <img src="{{ product.featured_image.src img_url: 'large' }}" alt="{{ product.featured_image.alt | escape}}" width="" height="">
+10 </a>
+11 </div>
+12 {% else %}
+13 <p>no matches</p>
+14 {% endfor %}
+15 {% if paginate.pages >1 %}
+16 {{ paginate default_pagination }}
+17 {% endif %}
+18 {% endpaginate %}
+19
