--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -371,11 +371,13 @@
 }
 
 .product-details {
+  width: 163px;
+  /* background-color: #387e7e21; */
   display: inline-block;
-  width: calc(100% - 100px); /* Adjust the 100px based on the width of your product image */
-  margin-left: 10px; /* Adds space between the product image and details */
+  /* width: calc(100% - 100px); */
+  margin-left: 10px;
   vertical-align: top;
-  position: relative; /* Keeps the element in the normal flow of the document */
+  position: relative;
 }
 
 .product-title {
