--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -80,7 +80,7 @@
             }}
           {% else %}
             {{
-              'login'
+              'Login'
               | customer_login_link
               | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"'
             }}
