--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -1,8 +1,7 @@
-<h1>Cart Drawer</h1>
+<h1 class="you-cart"> Your Cart</h1>
  {% schema %}
     {
-      "name":"cart drawer",
+      "name":"Cart drawer",
       "settings": []
-        
     }
 {% endschema %} 
