--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -1,6 +1,6 @@
 <h1 class="you-cart"> Your Cart</h1>
     {% for item in cart.items %}
-      <img src="{{ item.image |image_url:'200x' }}" alt="{{ item.title }}" width="" height="">
+      <img src="{{ item.image |img_url:'200x' }}" alt="{{ item.title }}" width="" height="">
       <h3>{{ item.product.title }}</h3>
       <p>{{ item.variant.title }}</p>
     
