--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -34,10 +34,12 @@
                         <div class="class-m">
                           <p class="p-m">
                             {% comment %} {{ childlink.title }} {% endcomment %}
+                            {% comment %} {% render 'snippets/header-megamenu' %} {% endcomment %}
                           </p>
                         </div>
                       </a>
                     {% endfor %}
+                
                   </div>
                 </div>
               </div>
