--- a/sections/template-list-collection.liquid
+++ b/sections/template-list-collection.liquid
@@ -1,4 +1,4 @@
-1 <div class="flex flex-col items-center my-8">
+ <div class="flex flex-col items-center my-8">
 <h1 class="text-3x1 font-medium">
  {{ section.settings.title}}
     </h1>
