--- a/snippets/product-cart.liquid
+++ b/snippets/product-cart.liquid
@@ -1,7 +1,7 @@
 <div class="collection_menu_container">
   {% if product.featured_image %}
     <img
-      src="{{ product.featured_image | image_url:'medium'}}"
+      src="{{ product.featured_image | img_url:'medium'}}"
       alt="{{ product.featured_image.alt }}"
       width=""
       height=" "
