--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -339,6 +339,7 @@
 <script>
   function openCartDrawer() {
     // Display the cart drawer
+    debugger
     document.getElementsByClassName('cart-drawer--active')[0].style.display = 'block';
   }
 </script>
