--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,7 +14,7 @@
 
 </head>
   <body class="gradient bg-sonal">
-    {% sections'footer' %}
+    
  
    {% sections 'header-group' %}  
    {% section  'cart-drawer' %}
@@ -23,6 +23,6 @@
       {{ content_for_layout }}
     </main>
 
-   
+    {% section'footer' %}
   </body>
 </html>
