--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -33,7 +33,7 @@
                       <a href="{{ childlink.url }}" class="child-link block p-2 hover:bg-gray-100">
                         <div class="class-m">
                           <p class="p-m">
-                            {% comment %} {{ childlink.title }} {% endcomment %}
+                            {{ childlink.title }}
                             {% comment %} {% render 'snippets/header-megamenu' %} {% endcomment %}
                           </p>
                         </div>
